--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+*.pprof
 .DS_Store
 
 # Test binary, built with `go test -c`
@@ -18,6 +19,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 gallery/
+.tmp/
 
 # Go workspace file
 go.work
